--- a/blog/issue1/2016-02-27.md
+++ b/blog/issue1/2016-02-27.md
@@ -51,7 +51,7 @@ Olena Kononova
 
 ### Methodology and Pedagogy
 
-##### Case Study of Student's Progress in Piano Playing: The Role of Training Model in Student's Expertise
+#### Case Study of Student's Progress in Piano Playing: The Role of Training Model in Student's Expertise
 
 Maja Marijan
 
