--- a/blog/issue3/2018-02-27.md
+++ b/blog/issue3/2018-02-27.md
@@ -47,7 +47,7 @@ Hien Sié
 
 ### Gender and Identity in Music and Dance
 
-##### Dance Music: Gender Issues and Embodiment of National Identity [In Russian]
+#### Dance Music: Gender Issues and Embodiment of National Identity [In Russian]
 
 Natalia Viktorovna Sokovikova​
 
