--- a/blog/issue4/2019-02-27.md
+++ b/blog/issue4/2019-02-27.md
@@ -49,7 +49,7 @@ Anna Galikowska-Gajewska
 
 ### Medical Ethnomusicology
 
-##### FUNCTION AND STRUCTURE OF YORUBA SONGS ON DENTAL HEALTH AMONG THE NURSING MOTHERS IN SOUTHWESTERN NIGERIA
+#### FUNCTION AND STRUCTURE OF YORUBA SONGS ON DENTAL HEALTH AMONG THE NURSING MOTHERS IN SOUTHWESTERN NIGERIA
 
 Olusegun Stephen Titus and Olufemi Elijah Oyetola​
 
