--- a/blog/issue5/2020-02-27.md
+++ b/blog/issue5/2020-02-27.md
@@ -49,7 +49,7 @@ Olusegun Stephen Titus
 
 ### Ballet History
 
-##### BALLET SCENE IN BELGRADE (1930-1940) [In Russian]
+#### BALLET SCENE IN BELGRADE (1930-1940) [In Russian]
 
 Viktor Ivanovich Kosik
 
