--- a/blog/issue6/2021-02-27.md
+++ b/blog/issue6/2021-02-27.md
@@ -54,7 +54,7 @@ Mareli Mostert
 
 ### An Addition to the History of Serbian Music
 
-##### FOREIGN STUDIES OF THE SERBIAN COMPOSERS CRUCIAL IN FORMING NATIONAL MUSIC CULTURE
+#### FOREIGN STUDIES OF THE SERBIAN COMPOSERS CRUCIAL IN FORMING NATIONAL MUSIC CULTURE
 
 Nadežda Mosusova
 
