--- a/blog/issue8/2023-02-27-art.md
+++ b/blog/issue8/2023-02-27-art.md
@@ -57,7 +57,7 @@ Sunday Olufemi Akande
 
 ### The Synthesis of the Arts – Ceremonial Rituals in Africa
 
-##### AMAQGHIRA AS A DANCER, SINGER AND DRUMMER
+#### AMAQGHIRA AS A DANCER, SINGER AND DRUMMER
 
 Benjamin Obeghare Izu and Alethea de Villiers
 
