--- a/issue9/article03/2024-02-23.mdx
+++ b/issue9/article03/2024-02-23.mdx
@@ -122,7 +122,8 @@ Human’s actions arising from detachments from culture and nature happen to be 
 
 Fela Anikulapo Kuti, formerly Fela Ransome Kuti, was the curator of the Afrobeat music in Nigeria, which he uses to articulate his ideology of black awareness, social and environmental justice and veneration for the human right. Fela uses his music as a tool for the mobilization of people to defend the cause of human rights against the oppression and corruption of the political ruler and military dictators in the country. Different scholars have delved into his music extrapolating the concept of political activism (Olorunyomi 2003; Olaniyan 2009; Salawu 2020). According to Olatunji (2007), Fela incorporated the word ‘Yabis’ (also used as ‘yab’ which is a biting satirical song composed deliberately with the aim to correct an atrocity, misdemeanour or sacrilege committed by individuals or a group of people in the society) to ‘yab’ himself, his band members, audience, as well as the government officials at all levels (from federal to local) and arms (executive, legislature and judiciary), revealing their various corrupt practices and embezzlement of money.
 
-### “Water e no get enemy” [“Water has no enemy"]
+### Water e no get enemy
+[Water has no enemy]
 
 However, Fela music encompasses political activism, environmental activism, entertainment and religious exploitation. However, the majority of his music tend towards activism. Environmental educators or activists are saddled with the responsibility to impact information on the state of the environment, what pro-environmental actions to undertake in understanding, and how best to utilise the global ecosystem, to avoid global degradation (Publicover et al, 2017). Fela could be described as a virtuoso musician who juxtaposes himself as an entertainer, humorist (with his satires), social and environmental critic. He employs the use of English, Yoruba and the Nigerian Pidgin in his compositions, which help him and his music to reach a lot of audiences. The Nigerian pidgin has been a widely accepted lingua franca among the music artistes in the country where there exist close to 200 local languages. According to Fasan (2014, 4-5), Fela Anikulapo-Kuti, the creator of Afrobeat music, was among the most notable forerunners who performed in Yoruba and the Nigerian Pidgin in the 1990s. His linguistic predilection went through three discrete stages, which ended with an ideologically inflected Pan-Africanism, that saw him (Fela) singing in broken English, called the Nigerian Pidgin.
 
@@ -162,7 +163,8 @@ No one can be an enemy to water]
 
 </div>
 
-<div className='figureBox'>
+<div className='floatBox'>
+<div className='figureBox left'>
 <figure className='score'>
 		<img
 			src={require('@site/issue9/article03/ex1.png').default}
@@ -177,9 +179,11 @@ No one can be an enemy to water]
 
 The aesthetic approach to sustainability of nature was used here by Fela to sing the appreciation of water in the community. Challie (2015, 21), in one of his approaches to ecomusicology, encourages sustainability through the concept of aesthetics - the philosophies of beauty - which in turn urges individuals to cogitate aesthetics, sound and music in quest for accomplishing sustainability, and the safeguarding of picturesque landmarks in the society. Water no get enemy is an example of such, in that musical aesthetics, sound, and nature were considered in the composition and production of this music. In addition, the song encapsulates the society and cultural living as well. Each unit of the family was addressed in their appreciation of nature – water. Just like African music is functional – from womb to tomb - this music discourses the nitty gritty of the rite of life, even from infancy to adulthood, connecting aesthetically growth, health, and socio-economic influences.
 
+</div>
+
 The musical phrase “omi o l’ota o” reveals the significant role music plays in the sustainability of shaping the people’s perception towards the indispensability of water in the society. Rather than the aesthetic of the music, the appreciation and preservation of the nature–water was emphasized. The musical phrases “if you fight am, less you wan die” (“you cannot live without water”) and “t’o mi ba pa’mo re, omi na lo ma lo” (“when one has a water reflux, water therapy is still the solution”) supported the social and environmental crusading as used by Fela and his music. Thus, the appreciation of water is seen even in a situation where water seems to be the human enemy, the same water is consulted in solving the problem and resolving the challenge. Eventually, nature-water must be valued in order to be utilized and leveraged on the extensive worth of it. Titus (2018, 85) expresses the concern of the Nigerian government at the different levels, which talk about the people’s responsibilities in protecting the waterways as symbols of both intangible and tangible heritages.
 
-### “Perambulator”
+### Perambulator
 
 Perambulator, literally is a small device with four wheels but no direction. The movement is just within a point. Fela Kuti music titled ‘perambulator’ describe the movement of an individual, organisation, or the government with no direction of purpose vis-à-vis environmental sanitation in the community (_Example 2_). Just like Allen (op. cit., 106) proposes, ecomusicology is no panacea - it cannot automatically provide an ultimate answer to the question of ecological problem or ecocriticism - rather it is just one component in the diverse ecosystem of thought, learning and action, which addresses crises from cultural, political and scientific views. “Perambulator” examines the ecosystem of land pollution and the possibility of providing a lasting solution.
 
@@ -230,7 +234,8 @@ Same place!]
 
 </div>
 
-<div className='figureBox'>
+<div className='floatBox'>
+<div className='figureBox left'>
 <figure className='score'>
 		<img
 			src={require('@site/issue9/article03/ex2.png').default}
@@ -244,6 +249,8 @@ Same place!]
 </div>
 
 Fela Kuti, an advocate of environmental justice uses the music, ‘perambulator’ to emphasize on the phenomenal damages done to the environment by individuals and the government institution. The musical phrase Lagos full full of dirty, explains the environmental polluted quandary of the nation’s economic city.  Debris of wastes are scattered and littered on the streets and major roads in Lagos, causing water erosion and air pollution which is hazardous to the health of the people. Fela, as an environmental activist, uses his music to preach the probably solution to the nemesis. The urbanization of Lagos state, just like other urban cities in the country (Ibadan, Onitsha, Kano) has been one of the factors causing environmental degradation. Institution upon institution has been set up to manage and control this situation but all to no avail as corruption has eaten up the whole system from the least to the greatest citizen in the country.
+
+</div>
 
 Fela, in his “Perambulator” explains how even the government that is saddled with the responsibility of managing the situation travels to other countries with the motive of learning how to curb or put a stop to environmental pollution, ended up doing nothing. Hence, the word ‘perambulator’ was used to describe them. The environmental challenges facing residents of these urban cities range from environmental and land pollution to air and noise pollution coming from the different religious centers scattered about the country, which use loud audio speakers in their efforts to project their messages to the public. A conceivable solution was suggested in the music when Fela sings about ‘other people dem go there to learn atomic energy’. This could be rephrased as energy recycle system, where reusable materials are recycled for another use. It is a system of refuse disposal, whereby different refuses are separated based on their materials, such as biodegradable and non-biodegradable materials. Such system is to allow the non-biodegradable materials to be recycled, avoid littering the environment, and thus avoid the main causes of the erosion and flooding.
 
