--- a/issue9/article08/2024-02-18.mdx
+++ b/issue9/article08/2024-02-18.mdx
@@ -127,7 +127,7 @@ of gestures, body language and movement.
 A fruitful cooperation with Paweł Wajde (the author of multimedia and photography, who frequently collaborated with the author in the past) and Bogna Wajde (make-up artist and costume designer) broadened the author's knowledge and experience in the field of other artistic activities.
 
 <div className='figureBox'>
-<figure>
+<figure className='large'>
 		<img
 			src={require('@site/issue9/article08/pic1.png').default}
 			alt='Picture 1. The choreography on Free for(m) macwin2 by Krzysztof Knittel.'
@@ -145,7 +145,6 @@ A fruitful cooperation with Paweł Wajde (the author of multimedia and photograp
   height={405}
   src="https://www.youtube.com/embed/OydGV95Q8wA"
   title="Krzysztof Knittel - Free for(m) macwin2"
-  frameBorder={0}
   allow="encrypted-media;"
   referrerPolicy="strict-origin-when-cross-origin"
 />
@@ -163,13 +162,13 @@ The author structured her choreography so as to be coherent with the music. She 
 The selection of images for the visual layer is a conscious choice of the music choreography author was developed by Paweł Wajde. Multimedia should be treated there as an equal performer, who is at the same time a complementary comment to the actions on stage as it is a magnificent background for the two performers moving in the outdoor space - the beach. The author's concept of music choreography with the use of technology constitutes an integral whole, highlighting the gentle sound structure of the piece, peacefulness, reverie, tranquility and communion with nature.
 
 <div className='figureBox'>
-<figure>
+<figure className='large'>
 		<img
 			src={require('@site/issue9/article08/pic2.png').default}
 			alt='Picture 2 The choreography on Theme from a movie "Nakręceni"[Shot] by Marek Czerniewicz.'
 		/>
 		<figcaption>
-			**Picture 2.**  The choreography on Theme from a movie "Nakręceni"[Shot] by Marek Czerniewicz. Photo by Ma Feier.
+			**Picture 2.** The choreography on Theme from a movie "Nakręceni"[Shot] by Marek Czerniewicz. Photo by Ma Feier.
 		</figcaption>
 	</figure>
 
@@ -181,7 +180,6 @@ The selection of images for the visual layer is a conscious choice of the music 
   height={405}
   src="https://www.youtube.com/embed/qwMk7ninEr0"
   title="Marek Czerniewicz - Theme from a movie &quot;Nakręceni&quot;" 
-  frameBorder={0}
   allow="encrypted-media;"
   referrerPolicy="strict-origin-when-cross-origin"
 />
