--- a/issue9/article09/2024-02-17.mdx
+++ b/issue9/article09/2024-02-17.mdx
@@ -193,8 +193,8 @@ __________________
 5. Lamb, G. 2010. _Choral techniques_. Rice University, Houston, Texas.
 6. Lowi, Theodore J. 1972. "Four Systems of Policy, Politics, and Choice." _Public Administration Review 32 (4): 298-310_.
 7. Nwankpa, O. N. 2013. _Community music programme: development and management_. Port Harcourt: Celwil Publishers.
-8. Ogisi, A. A. 2008. ‘The development of Nigerian art music, 1920–2000). _Journal of the Association of Nigerian Musicologists (Special Edition): 151-163_.
-9. Omojola, B. 1995. _Nigerian Art Musi_c. Ibadan: IFRA
+8. Ogisi, A. A. 2008. ‘The development of Nigerian art music, 1920–2000'. _Journal of the Association of Nigerian Musicologists (Special Edition): 151-163_.
+9. Omojola, B. 1995. _Nigerian Art Music_. Ibadan: IFRA
 10. Schmidt, Patrick. 2017 "Why policy matters: developing a policy vocabulary within music education." In _Policy and the Political lLfe of Music Education: Standpoints for Understanding and Action. Edited by P. Schmidt and R. Colwell. 11-36_. New York: Oxford University Press
 11. Schneider, Anne and Helen Ingram. 1997. _Policy design for democracy_. Lawrence University Press of Kansas.
 12. Vargas-Hernandez, J.G, M. R. N. Emba, and F. N. H. A. Irani. 2011. "What is policy, social policy and social policy changing?" _International journal of business and social science. Vol. 2(10): 287-291_.
