--- a/issue9/article12/2024-02-14.mdx
+++ b/issue9/article12/2024-02-14.mdx
@@ -369,11 +369,8 @@ Navodimo imena partnerki sa kojima je trajao kao prvak tokom svoje duge karijere
 
 Ulogu Alberta u _Žizeli_, Rastislav je igrao sa raznim prvakinjama novosadskog Baleta u svojoj Kući, potom sa gošćama iz drugih kuća, zatim na gostovanjima po raznim gradovima. Većina se kritičarki, ali i publike, slaže da je zapamćena upravo ova uloga, čak kao neka vrsta poistovećivanja njegove osobne prirode sa ovim romantičnim likom.
 
-Nakon zaokružene igračke karijere Biljane Njegovan, Rastislav Varga saradnju nastavlja sa prvakinjom Oksanom Storožuk, koja preuzima prvu poziciju igračice u ansamblu. O tom vremenu i njihovoj saradnji ona se priseća, naročito vremena kada je postala članica Baleta SNP, po dolasku iz Kijeva:
-
-> Moj prvi susret sa Rastislavom se dogodio davne 1990. godine, u vreme kad sam tek stigla u Balet Srpskog narodnog pozorišta – imala sam samo 20 godina. Spremali smo baletsku numeru „Satanela” za Gala baletski koncert u Srpskom narodnom pozorištu. U to vreme nisam poznavala igrače ansambla, nisam znala srpski jezik, bila sam jako uplašena. Ali sam odahnula već na prvoj probi: moj partner (Rastislav), govori ruski! Fenomenalan je partner i igrač! Pomogli su mi njegovo znanje i iskustvo u igri, veoma mnogo. Rastika je pažljiv partner koji balerinu stavlja u prvi plan. U njegovim rukama bila sam sigurna i puna inspiracije. Pored toga, bio je dobar pedagog, puno sam tada naučila od njega. Igrali smo dugo i dosta zajedno: Žizela, Labudovo jezero, Krcko Oraščić, Serenada, Vragolanka, Kraljeva jesen, Žar Ptica, List, Karmina burana, Konjić Grbonjić, Izbiračica, Vesela udovica.
-
-<div className='figureBox'>
+<div className='floatBox'>
+<div className='figureBox left'>
 <figure>
 		<img
 			src={require('@site/issue9/article12/pic8.png').default}
@@ -385,6 +382,14 @@ Nakon zaokružene igračke karijere Biljane Njegovan, Rastislav Varga saradnju n
 	</figure>
 
 </div>
+
+Nakon zaokružene igračke karijere Biljane Njegovan, Rastislav Varga saradnju nastavlja sa prvakinjom Oksanom Storožuk, koja preuzima prvu poziciju igračice u ansamblu. O tom vremenu i njihovoj saradnji ona se priseća, naročito vremena kada je postala članica Baleta SNP, po dolasku iz Kijeva:
+
+> Moj prvi susret sa Rastislavom se dogodio davne 1990. godine, u vreme kad sam tek stigla u Balet Srpskog narodnog pozorišta – imala sam samo 20 godina. Spremali smo baletsku numeru „Satanela” za Gala baletski koncert u Srpskom narodnom pozorištu. U to vreme nisam poznavala igrače ansambla, nisam znala srpski jezik, bila sam jako uplašena. Ali sam odahnula već na prvoj probi: moj partner (Rastislav), govori ruski! Fenomenalan je partner i igrač! Pomogli su mi njegovo znanje i iskustvo u igri, veoma mnogo. Rastika je pažljiv partner koji balerinu stavlja u prvi plan. U njegovim rukama bila sam sigurna i puna inspiracije. Pored toga, bio je dobar pedagog, puno sam tada naučila od njega. Igrali smo dugo i dosta zajedno: Žizela, Labudovo jezero, Krcko Oraščić, Serenada, Vragolanka, Kraljeva jesen, Žar Ptica, List, Karmina burana, Konjić Grbonjić, Izbiračica, Vesela udovica.
+
+</div>
+
+
 <div className='figureBox'>
 <figure className='large'>
 		<img
