--- a/blog/Issue9/2024-02-27-art.md
+++ b/blog/Issue9/2024-02-27-art.md
@@ -82,13 +82,13 @@ Samuel Adeleke Joel
 
 ### Historical Overview
 
-##### Links Between Dance And Music At The Time Of The Loss Of Polish Statehood Between 1795 And 1918
+#### Links Between Dance And Music At The Time Of The Loss Of Polish Statehood Between 1795 And 1918
 
 Klaudia Carlos-Machej
 
 [Read Online](/articles/issue9/links-between-dance-and-music-at-the-time-of-the-loss-of-polish-statehood) [Download](https://drive.google.com/file/d/1-elx42On_RU-TbKeVTPAEVzkLcCUu1sh/view?usp=sharing)
 
-##### The Contribution To The History Of The Ballet Of Serbian National Theater In Novi Sad: Rastislav Varga (1955-2021) [In Serbian]
+#### The Contribution To The History Of The Ballet Of Serbian National Theater In Novi Sad: Rastislav Varga (1955-2021) [In Serbian]
 
 Svenka Savić
 
